[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bintang"
version = "0.2.12"
description = "A tiny and temporary db for quick data cleansing and transformation. It is a high-level Python coding and would help any Pythonistas up to speed with ETL work."
readme = "README.rst"
[project.optional-dependencies]
database = [
	"psycopg",    # for_sql() that specifically target postgresql database
	"rapidfuzz",  # for fuzzy_cmprows() to overtake Python's difflib.SequenceMatcher
]
excel = [
    "openpyxl",   # for read_excel() and to_excel() using .xlsx file
	"xlrd",       # for read_excel() when to read .xls file
	"xlwt",       # for to_excel() using .xls file
    "pyodbc",     # for to_sql()
]
all = [
	"psycopg",    # for_sql() that specifically target postgresql database
	"rapidfuzz",  # for fuzzy_cmprows() to overtake Python's difflib.SequenceMatcher
	"openpyxl",   # for read_excel() and to_excel() using .xlsx file
	"xlrd",       # for read_excel() when to read .xls file
	"xlwt",       # for to_excel() using .xls file
    "pyodbc",     # for to_sql()
]
[tool.setuptools.packages.find]
where = ["src"]  # This tells setuptools to look inside the src folder

[tool.pytest.ini_options]
testpaths = ['tests']