[build-system]
requires = ["setuptools>=61.0"]#, "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bintang"
version = "0.2.27"
description = "A tiny and temporary db for quick data cleansing and transformation. It is a high-level Python coding and would help any Pythonistas up to speed with ETL work."
readme = "README.rst"

[project.optional-dependencies]
database = [
	"psycopg",    # for_sql() that specifically target postgresql database
	"rapidfuzz",  # for fuzzy_cmprows() to overtake Python's difflib.SequenceMatcher
]
excel = [
    "openpyxl",   # for read_excel() and to_excel() using .xlsx file
	"xlrd",       # for read_excel() when to read .xls file
	"xlwt",       # for to_excel() using .xls file
    "pyodbc",     # for to_sql()
]
test = [
	"pytest",
	"packaging",
]
all = [
	"psycopg",    
	"rapidfuzz",  
	"openpyxl",   
	"xlrd",       
	"xlwt",       
    "pyodbc",     
	"pytest",     
	"packaging",  
]


[tool.setuptools.packages.find]
where = ["src"]  # This tells setuptools to look inside the src folder

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"

[tool.pytest.ini_options]
testpaths = ['tests']