[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bintang"
version = "0.2.29"
description = "A tiny and temporary db for quick data cleansing and transformation. It is a high-level Python coding and would help any Pythonistas up to speed with ETL work."
readme = "README.rst"

[project.optional-dependencies]
validation = [
    "python-dateutil",  # for to_datetime() and to_timedelta()
	"rapidfuzz" # to take over difflib.SequenceMatcher
	]
database = [
	"psycopg",    # for to_sql() and read_sql() for Postgresql specifically
    "pyodbc"     # for to_sql() and read_sql using ODBC connection
]
excel = [
    "openpyxl",   # for read_excel() and to_excel() using .xlsx file
	"xlrd",       # for read_excel() when to read .xls file
	"xlwt"       # for to_excel() using .xls file
]
test = [
	"pytest"
]
all = [
	"python-dateutil",
	"rapidfuzz",
	"psycopg",
	"pyodbc", 
	"openpyxl",   
	"xlrd",       
	"xlwt",    
	"pytest" 
]

[tool.setuptools.packages.find]
where = ["src"]  # This tells setuptools to look inside the src folder

[tool.pytest.ini_options]
testpaths = ['tests']